src/tests/test-src/errors/E62-non-struct-dot.syntran
// E62: non-struct-dot
// Dot member access was used on a variable that isn't a struct

let a = 5;
let b = a.x;
